--- a/frontend/styles.scss
+++ b/frontend/styles.scss
@@ -1,33 +1,31 @@
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
-  font-size: 16px;
-  line-height: 24px;
-  font-weight: 400;
-
-  color: #0f0f0f;
   background-color: #f6f6f6;
-
-  font-synthesis: none;
-  text-rendering: optimizeLegibility;
+  color: #0f0f0f;
+  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-size: 1.6rem;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  -webkit-text-size-adjust: 100%;
+  font-synthesis: none;
+  font-weight: 400;
+  line-height: 2.4rem;
+  text-rendering: optimizelegibility;
+  text-size-adjust: 100%;
 }
 
 .container {
-  margin: 0;
-  padding-top: 10vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
+  padding-top: 10vh;
+  margin: 0;
   text-align: center;
 }
 
 .logo {
   height: 6em;
   padding: 1.5em;
-  will-change: filter;
   transition: 0.75s;
+  will-change: filter;
 }
 
 .logo.tauri:hover {
@@ -40,8 +38,8 @@
 }
 
 a {
-  font-weight: 500;
   color: #646cff;
+  font-weight: 500;
   text-decoration: inherit;
 }
 
@@ -55,16 +53,16 @@ h1 {
 
 input,
 button {
-  border-radius: 8px;
-  border: 1px solid transparent;
   padding: 0.6em 1.2em;
+  border: 0.1rem solid transparent;
+  border-radius: 0.8rem;
+  background-color: #fff;
+  box-shadow: 0 0.2rem 0.2rem rgb(0 0 0 / 20%);
+  color: #0f0f0f;
+  font-family: inherit;
   font-size: 1em;
   font-weight: 500;
-  font-family: inherit;
-  color: #0f0f0f;
-  background-color: #ffffff;
   transition: border-color 0.25s;
-  box-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
 }
 
 button {
@@ -74,24 +72,24 @@ button {
 button:hover {
   border-color: #396cd8;
 }
+
 button:active {
   border-color: #396cd8;
   background-color: #e8e8e8;
 }
 
-input,
-button {
+* {
   outline: none;
 }
 
 #greet-input {
-  margin-right: 5px;
+  margin-right: 0.5rem;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    color: #f6f6f6;
     background-color: #2f2f2f;
+    color: #f6f6f6;
   }
 
   a:hover {
@@ -100,9 +98,10 @@ button {
 
   input,
   button {
-    color: #ffffff;
     background-color: #0f0f0f98;
+    color: #fff;
   }
+
   button:active {
     background-color: #0f0f0f69;
   }
